# nextdns-mcp

./: Dockerfile  pyproject.toml
.github/workflows/: auto-release.yml  codeql.yml  dependabot-auto-merge.yml  docker-publish.yml  e2e-mcp-gateway.yml  unit-tests.yml  version-bumper.yml  version-guard.yml
scripts/: gateway_e2e_run.sh
src/nextdns_mcp/: __init__.py
tests/unit/: test_server_additional_coverage.py  test_server_functions.py
