[project]
name = "nextdns-mcp"
version = "2.0.2"
description = "NextDNS MCP Server - Model Context Protocol server for NextDNS API built with FastMCP"
authors = [{name = "NextDNS MCP Contributors"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.0.1",
    "httpx>=0.28.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "black>=25.9.0",
    "ruff>=0.14.3",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "types-pyyaml>=6.0.12.20250915",
    "radon>=6.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nextdns_mcp"]

[tool.hatch.build]
include = [
    "src/nextdns_mcp/*.yaml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 120
target-version = ["py314"]

[tool.ruff]
line-length = 120
target-version = "py314"
